# docs/openapi.yaml
@@ -1,4 +1,4 @@
-﻿openapi: 3.1.0
+openapi: 3.1.0
 info:
   title: OpenAPI definition
   version: v0
@@ -234,11 +234,11 @@ paths:
       responses:
         "200":
           description: OK
-  /api/v1/admin/subscriber-services/{id}:
+  /api/v1/admin/subscriber-features/{id}:
     get:
       tags:
       - admin-data-controller
-      operationId: getSubscriberService
+      operationId: getSubscriberFeature
       parameters:
       - name: id
         in: path
@@ -252,11 +252,11 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/SubscriberServiceAdminResponse"
+                $ref: "#/components/schemas/SubscriberFeatureAdminResponse"
     put:
       tags:
       - admin-data-controller
-      operationId: updateSubscriberService
+      operationId: updateSubscriberFeature
       parameters:
       - name: id
         in: path
@@ -268,7 +268,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/SubscriberServiceUpsertRequest"
+              $ref: "#/components/schemas/SubscriberFeatureUpsertRequest"
         required: true
       responses:
         "200":
@@ -276,11 +276,11 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/SubscriberServiceAdminResponse"
+                $ref: "#/components/schemas/SubscriberFeatureAdminResponse"
     delete:
       tags:
       - admin-data-controller
-      operationId: deleteSubscriberService
+      operationId: deleteSubscriberFeature
       parameters:
       - name: id
         in: path
@@ -291,7 +291,7 @@ paths:
       responses:
         "200":
           description: OK
-  /api/v1/admin/services/{id}:
+  /api/v1/admin/features/{id}:
     get:
       tags:
       - admin-data-controller
@@ -309,7 +309,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/AdditionalServiceAdminResponse"
+                $ref: "#/components/schemas/AdditionalFeatureAdminResponse"
     put:
       tags:
       - admin-data-controller
@@ -325,7 +325,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AdditionalServiceUpsertRequest"
+              $ref: "#/components/schemas/AdditionalFeatureUpsertRequest"
         required: true
       responses:
         "200":
@@ -333,7 +333,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/AdditionalServiceAdminResponse"
+                $ref: "#/components/schemas/AdditionalFeatureAdminResponse"
     delete:
       tags:
       - admin-data-controller
@@ -348,7 +348,7 @@ paths:
       responses:
         "200":
           description: OK
-  /api/v1/admin/service-categories/{id}:
+  /api/v1/admin/feature-categories/{id}:
     get:
       tags:
       - admin-data-controller
@@ -430,11 +430,11 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ChangeTariffResponse"
-  /api/v1/subscribers/{subscriberId}/services/{serviceId}/disable:
+  /api/v1/subscribers/{subscriberId}/features/{featureId}/disable:
     post:
       tags:
       - service-controller
-      operationId: disableService
+      operationId: disableFeature
       parameters:
       - name: subscriberId
         in: path
@@ -442,7 +442,7 @@ paths:
         schema:
           type: integer
           format: int64
-      - name: serviceId
+      - name: featureId
         in: path
         required: true
         schema:
@@ -454,7 +454,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/DisableServiceResponse"
+                $ref: "#/components/schemas/DisableFeatureResponse"
   /api/v1/admin/tariffs:
     get:
       tags:
@@ -579,11 +579,11 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/SubscriberAdminResponse"
-  /api/v1/admin/subscriber-services:
+  /api/v1/admin/subscriber-features:
     get:
       tags:
       - admin-data-controller
-      operationId: getSubscriberServices
+      operationId: getSubscriberFeatures
       responses:
         "200":
           description: OK
@@ -592,16 +592,16 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/SubscriberServiceAdminResponse"
+                  $ref: "#/components/schemas/SubscriberFeatureAdminResponse"
     post:
       tags:
       - admin-data-controller
-      operationId: createSubscriberService
+      operationId: createSubscriberFeature
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/SubscriberServiceUpsertRequest"
+              $ref: "#/components/schemas/SubscriberFeatureUpsertRequest"
         required: true
       responses:
         "200":
@@ -609,8 +609,8 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/SubscriberServiceAdminResponse"
-  /api/v1/admin/services:
+                $ref: "#/components/schemas/SubscriberFeatureAdminResponse"
+  /api/v1/admin/features:
     get:
       tags:
       - admin-data-controller
@@ -623,7 +623,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/AdditionalServiceAdminResponse"
+                  $ref: "#/components/schemas/AdditionalFeatureAdminResponse"
     post:
       tags:
       - admin-data-controller
@@ -632,7 +632,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AdditionalServiceUpsertRequest"
+              $ref: "#/components/schemas/AdditionalFeatureUpsertRequest"
         required: true
       responses:
         "200":
@@ -640,8 +640,8 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/AdditionalServiceAdminResponse"
-  /api/v1/admin/service-categories:
+                $ref: "#/components/schemas/AdditionalFeatureAdminResponse"
+  /api/v1/admin/feature-categories:
     get:
       tags:
       - admin-data-controller
@@ -750,11 +750,11 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TariffInfoResponse"
-  /api/v1/subscribers/{subscriberId}/services:
+  /api/v1/subscribers/{subscriberId}/features:
     get:
       tags:
       - service-controller
-      operationId: findSubscriberServices
+      operationId: findSubscriberFeatures
       parameters:
       - name: subscriberId
         in: path
@@ -781,14 +781,14 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/ServiceSummaryDto"
-  /api/v1/services/{serviceId}:
+                  $ref: "#/components/schemas/FeatureSummaryDto"
+  /api/v1/features/{featureId}:
     get:
       tags:
       - service-controller
-      operationId: getServiceDetails
+      operationId: getFeatureDetails
       parameters:
-      - name: serviceId
+      - name: featureId
         in: path
         required: true
         schema:
@@ -800,8 +800,8 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ServiceDetailsResponse"
-  /api/v1/services/categories:
+                $ref: "#/components/schemas/FeatureDetailsResponse"
+  /api/v1/features/categories:
     get:
       tags:
       - service-controller
@@ -945,13 +945,13 @@ components:
         currentTariffId:
           type: integer
           format: int64
-    SubscriberServiceUpsertRequest:
+    SubscriberFeatureUpsertRequest:
       type: object
       properties:
         subscriberId:
           type: integer
           format: int64
-        serviceId:
+        featureId:
           type: integer
           format: int64
         status:
@@ -966,10 +966,10 @@ components:
           type: string
           format: date-time
       required:
-      - serviceId
+      - featureId
       - status
       - subscriberId
-    SubscriberServiceAdminResponse:
+    SubscriberFeatureAdminResponse:
       type: object
       properties:
         id:
@@ -978,7 +978,7 @@ components:
         subscriberId:
           type: integer
           format: int64
-        serviceId:
+        featureId:
           type: integer
           format: int64
         status:
@@ -992,7 +992,7 @@ components:
         disabledAt:
           type: string
           format: date-time
-    AdditionalServiceUpsertRequest:
+    AdditionalFeatureUpsertRequest:
       type: object
       properties:
         name:
@@ -1010,7 +1010,7 @@ components:
       - description
       - monthlyFee
       - name
-    AdditionalServiceAdminResponse:
+    AdditionalFeatureAdminResponse:
       type: object
       properties:
         id:
@@ -1096,14 +1096,14 @@ components:
           type: string
         monthlyFee:
           type: number
-    DisableServiceResponse:
+    DisableFeatureResponse:
       type: object
       properties:
         success:
           type: boolean
         message:
           type: string
-        serviceId:
+        featureId:
           type: integer
           format: int64
         billingTransactions:
@@ -1170,7 +1170,7 @@ components:
           type: number
         currentTariff:
           $ref: "#/components/schemas/TariffSummaryDto"
-    ServiceSummaryDto:
+    FeatureSummaryDto:
       type: object
       properties:
         id:
@@ -1184,7 +1184,7 @@ components:
           type: number
         status:
           type: string
-    ServiceDetailsResponse:
+    FeatureDetailsResponse:
       type: object
       properties:
         id:
